{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 10,
  "lineage": "c41d7dce-a6ba-f5c6-4fca-7216ab322bc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:security-group/sg-05549db5bb6a44236",
            "description": "Security group para a Lambda de autenticacao",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS (CloudWatch Logs)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-05549db5bb6a44236",
            "ingress": [],
            "name": "oficina-lambda-auth-20260413191256791100000001",
            "name_prefix": "oficina-lambda-auth-",
            "owner_id": "840515967820",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "oficina",
              "Repo": "lambda-auth-oficina"
            },
            "timeouts": null,
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from Lambda auth",
            "from_port": 5432,
            "id": "sgrule-244659992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0116c5f92024774d0",
            "security_group_rule_id": "sgr-015a32f1e8654bc39",
            "self": false,
            "source_security_group_id": "sg-05549db5bb6a44236",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda"
          ]
        }
      ]
    }
  ]
}